--- a/index.html
+++ b/index.html
@@ -1,16 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="css/bootstrap.min.css">
-  <link rel="stylesheet" href="css/style.css">
-  <title>Delani-Studio</title>
-</head>
-<body>
-  
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="css/style.css" />
+    <title>Delani-Studio</title>
+  </head>
 
-  <script src="js/jquery-3.6.0.js"></script>
-  <script src="js/scripts.js"></script>
-</body>
+  <body>
+    <div class="container-fluid">
+      <div class="container">
+        <div class="logo text-center">
+          <img src="assets/logo/logo.png" alt="logo" />
+        </div>
+        <div class="header">
+          <h1 class="text-light text-center">WELCOME</h1>
+          <br />
+          <h1 class="text-light text-center">TO DELANI STUDIO</h1>
+          <p class="text-light text-center">
+            AMAZING PEOPLE ARE MAKING AMAZING DESIGNS IN A FUN ENVIRONMENT
+          </p>
+        </div>
+        <div class="mouse-icon text-center">
+          <img src="assets/mouse_click.png" alt="mouse-click-icon" />
+        </div>
+      </div>
+    </div>
+
+    <div class="container about">
+      <h3 class="text-center">ABOUT US</h3>
+      <p class="text-center">
+        When you work with us, you are part of a team of committed
+        collaborators. All aspcts of software development process are
+        intedrated, interactive and agile.
+      </p>
+      <p class="text-center">
+        Our approach unifies design, development and product management to
+        create exceptional products.
+      </p>
+      <p class="text-center">
+        We start each project by understanding your business goals, the user's
+        needs and the product requirements
+      </p>
+      <p class="text-center">
+        Then we help translate them into effective and elegant solutions
+      </p>
+    </div>
+
+    <div class="container-fluid services">
+      <div class="container"></div>
+    </div>
+
+    <script src="js/jquery-3.6.0.js"></script>
+    <script src="js/scripts.js"></script>
+  </body>
+</html>
