create services section

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
 
   <body>
-    <div class="container-fluid">
+    <div class="container-fluid head">
       <div class="container">
         <div class="logo text-center">
           <img src="assets/logo/logo.png" alt="logo" />
@@ -49,7 +49,21 @@
     </div>
 
     <div class="container-fluid services">
-      <div class="container"></div>
+      <div class="container services-content">
+        <h3 class="text-center text-light">SERVICES</h3>
+        <p class="text-center text-light">
+          Before we sign a contract or write a line of code our team will spend
+          the necessary time needed to understand yor product vision
+        </p>
+        <p class="text-center text-light">
+          The outcome of this scoping session is proposal or high-level
+          statement of work.
+        </p>
+        <p class="text-center text-light">
+          based on your requirements, we can provide acomplete offering or just
+          the pieces you need.
+        </p>
+      </div>
     </div>
 
     <script src="js/jquery-3.6.0.js"></script>
