create design section

--- a/index.html
+++ b/index.html
@@ -66,6 +66,21 @@
       </div>
     </div>
 
+    <div class="container-fluid what-we-do">
+      <div class="design">
+        <h3>Design</h3>
+        <p>
+          Our design practice offers a full range of services including brand 
+          strategy, interaction and visual design and user experience testing.
+        </p>
+        <p>
+          Throughout your project, our designers create and implement visula 
+          design and workflows, solicit user feedback and work with to make sure 
+          what gets built is what is needed.
+        </p>
+      </div>
+    </div>
+
     <script src="js/jquery-3.6.0.js"></script>
     <script src="js/scripts.js"></script>
   </body>
