create development section

--- a/index.html
+++ b/index.html
@@ -68,15 +68,27 @@
 
     <div class="container-fluid what-we-do">
       <div class="design">
-        <h3>Design</h3>
-        <p>
+        <h3 class="text-center">DESIGN</h3>
+        <p class="text-center">
           Our design practice offers a full range of services including brand 
           strategy, interaction and visual design and user experience testing.
         </p>
-        <p>
+        <p class="text-center">
           Throughout your project, our designers create and implement visula 
           design and workflows, solicit user feedback and work with to make sure 
           what gets built is what is needed.
+        </p>
+      </div>
+      <div class="development">
+        <h3 class="text-center">DEVELOPMENT</h3>
+        <p class="text-center">
+          All engineers are fluent in the latest enterpris, mobile and web 
+          development technologies.
+        </p>
+        <p class="text-center">
+          They collaborate with your team to write, and improve code on a 
+          daily basis, using proven practices such as test-driven development 
+          and pair programming.
         </p>
       </div>
     </div>
