--- a/index.html
+++ b/index.html
@@ -68,28 +68,54 @@
 
     <div class="container-fluid what-we-do">
       <div class="design">
-        <h3 class="text-center">DESIGN</h3>
-        <p class="text-center">
-          Our design practice offers a full range of services including brand 
-          strategy, interaction and visual design and user experience testing.
-        </p>
-        <p class="text-center">
-          Throughout your project, our designers create and implement visula 
-          design and workflows, solicit user feedback and work with to make sure 
-          what gets built is what is needed.
-        </p>
+        <div class="d-none">
+          <h5 class="text-center">DESIGN</h5>
+          <p class="text-center">
+            Our design practice offers a full range of services including brand 
+            strategy, interaction and visual design and user experience testing.
+          </p>
+          <p class="text-center">
+            Throughout your project, our designers create and implement visula 
+            design and workflows, solicit user feedback and work with to make sure 
+            what gets built is what is needed.
+          </p>
+        </div>
+        <div class="text-center"><img src="assets/services_icons/design_icon.png" alt="design">
+          <p class="text-center">DESIGN</p>
+        </div>
       </div>
       <div class="development">
-        <h3 class="text-center">DEVELOPMENT</h3>
-        <p class="text-center">
-          All engineers are fluent in the latest enterpris, mobile and web 
-          development technologies.
-        </p>
-        <p class="text-center">
-          They collaborate with your team to write, and improve code on a 
-          daily basis, using proven practices such as test-driven development 
-          and pair programming.
-        </p>
+        <div class="d-none">
+          <h5 class="text-center">DEVELOPMENT</h5>
+          <p class="text-center">
+            All engineers are fluent in the latest enterpris, mobile and web 
+            development technologies.
+          </p>
+          <p class="text-center">
+            They collaborate with your team to write, and improve code on a 
+            daily basis, using proven practices such as test-driven development 
+            and pair programming.
+          </p>
+        </div>
+        <div class="text-center"><img src="assets/services_icons/dev_icon.png" alt="design"> 
+          <p class="text-center">DEVELOPMENT</p>
+        </div>
+      </div>
+      <div class="product">
+        <div class="d-none">
+          <h5 class="text-center">PRODUCT MANAGEMENT</h5>
+          <p class="text-center">
+            Planning and development is iterative. Because we are constantly coding and 
+            testing, the products we build are always ready to go live.
+          </p>
+          <p class="text-center">
+            This iterative process allows for changes as business 
+            requirements evolve.
+          </p>
+        </div>
+        <div class="text-center"><img src="assets/services_icons/product_icon.png" alt="design"> 
+          <p class="text-center">PRODUCT MANAGEMENT</p>
+        </div>
       </div>
     </div>
 
