--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
       </div>
     </div>
 
+    <div><h3 class="text-center pt-4">WHAT WE DO</h3></div>
     <div class="container-fluid what-we-do">
       <div class="design">
         <div class="d-none">
@@ -118,6 +119,8 @@
         </div>
       </div>
     </div>
+
+  
 
     <script src="js/jquery-3.6.0.js"></script>
     <script src="js/scripts.js"></script>
