create portfolio section

--- a/index.html
+++ b/index.html
@@ -120,7 +120,16 @@
       </div>
     </div>
 
-  
+    <div class="container portfolio">
+      <div class="text-center"><img src="assets/services_icons/dev_icon.png" alt="design"></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+    </div>
 
     <script src="js/jquery-3.6.0.js"></script>
     <script src="js/scripts.js"></script>
