--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
       <h3 class="text-center">ABOUT US</h3>
       <p class="text-center">
         When you work with us, you are part of a team of committed
-        collaborators. All aspcts of software development process are
-        intedrated, interactive and agile.
+        collaborators. All aspects of software development process are
+        intergrated, interactive and agile.
       </p>
       <p class="text-center">
         Our approach unifies design, development and product management to
@@ -121,14 +121,14 @@
     </div>
 
     <div class="container portfolio">
-      <div class="text-center"><img src="assets/services_icons/dev_icon.png" alt="design"></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
+      <div><img src="assets/portfolio/work4.jpg" alt="work"></div>
+      <div><img src="assets/portfolio/work3.jpg" alt="work"></div>
+      <div><img src="assets/portfolio/work2.jpg" alt="work"></div>
+      <div><img src="assets/portfolio/work1.jpg" alt="work"></div>
+      <div><img src="assets/portfolio/work5.jpg" alt="work"></div>
+      <div><img src="assets/portfolio/work6.jpg" alt="work"></div>
+      <div><img src="assets/portfolio/work7.jpg" alt="work"></div>
+      <div><img src="assets/portfolio/work8.jpg" alt="work"></div>
     </div>
 
     <script src="js/jquery-3.6.0.js"></script>
