--- a/index.html
+++ b/index.html
@@ -72,16 +72,17 @@
         <div class="d-none">
           <h5 class="text-center">DESIGN</h5>
           <p class="text-center">
-            Our design practice offers a full range of services including brand 
+            Our design practice offers a full range of services including brand
             strategy, interaction and visual design and user experience testing.
           </p>
           <p class="text-center">
-            Throughout your project, our designers create and implement visula 
-            design and workflows, solicit user feedback and work with to make sure 
-            what gets built is what is needed.
+            Throughout your project, our designers create and implement visula
+            design and workflows, solicit user feedback and work with to make
+            sure what gets built is what is needed.
           </p>
         </div>
-        <div class="text-center"><img src="assets/services_icons/design_icon.png" alt="design">
+        <div class="text-center">
+          <img src="assets/services_icons/design_icon.png" alt="design" />
           <p class="text-center">DESIGN</p>
         </div>
       </div>
@@ -89,16 +90,17 @@
         <div class="d-none">
           <h5 class="text-center">DEVELOPMENT</h5>
           <p class="text-center">
-            All engineers are fluent in the latest enterpris, mobile and web 
+            All engineers are fluent in the latest enterpris, mobile and web
             development technologies.
           </p>
           <p class="text-center">
-            They collaborate with your team to write, and improve code on a 
-            daily basis, using proven practices such as test-driven development 
+            They collaborate with your team to write, and improve code on a
+            daily basis, using proven practices such as test-driven development
             and pair programming.
           </p>
         </div>
-        <div class="text-center"><img src="assets/services_icons/dev_icon.png" alt="design"> 
+        <div class="text-center">
+          <img src="assets/services_icons/dev_icon.png" alt="design" />
           <p class="text-center">DEVELOPMENT</p>
         </div>
       </div>
@@ -106,29 +108,40 @@
         <div class="d-none">
           <h5 class="text-center">PRODUCT MANAGEMENT</h5>
           <p class="text-center">
-            Planning and development is iterative. Because we are constantly coding and 
-            testing, the products we build are always ready to go live.
+            Planning and development is iterative. Because we are constantly
+            coding and testing, the products we build are always ready to go
+            live.
           </p>
           <p class="text-center">
-            This iterative process allows for changes as business 
-            requirements evolve.
+            This iterative process allows for changes as business requirements
+            evolve.
           </p>
         </div>
-        <div class="text-center"><img src="assets/services_icons/product_icon.png" alt="design"> 
+        <div class="text-center">
+          <img src="assets/services_icons/product_icon.png" alt="design" />
           <p class="text-center">PRODUCT MANAGEMENT</p>
         </div>
       </div>
     </div>
 
-    <div class="container portfolio">
-      <div><img src="assets/portfolio/work4.jpg" alt="work"></div>
-      <div><img src="assets/portfolio/work3.jpg" alt="work"></div>
-      <div><img src="assets/portfolio/work2.jpg" alt="work"></div>
-      <div><img src="assets/portfolio/work1.jpg" alt="work"></div>
-      <div><img src="assets/portfolio/work5.jpg" alt="work"></div>
-      <div><img src="assets/portfolio/work6.jpg" alt="work"></div>
-      <div><img src="assets/portfolio/work7.jpg" alt="work"></div>
-      <div><img src="assets/portfolio/work8.jpg" alt="work"></div>
+    <div><h3 class="text-center pt-4 pb-3">PORTFOLIO</h3></div>
+    <div class="container portfolio pb-5">
+      <div><img src="assets/portfolio/work4.jpg" alt="work" /></div>
+      <div><img src="assets/portfolio/work3.jpg" alt="work" /></div>
+      <div><img src="assets/portfolio/work2.jpg" alt="work" /></div>
+      <div><img src="assets/portfolio/work1.jpg" alt="work" /></div>
+      <div><img src="assets/portfolio/work5.jpg" alt="work" /></div>
+      <div><img src="assets/portfolio/work6.jpg" alt="work" /></div>
+      <div><img src="assets/portfolio/work7.jpg" alt="work" /></div>
+      <div class="overlay-wrapper">
+        <img src="assets/portfolio/work8.jpg" alt="work" />
+        <div class="overlay-cont">
+          <div class="overlay">
+            <h3 class="text-light p-2">BAILEY</h3>
+            <h3 class="text-light p-2">WONGER</h3>
+          </div>
+        </div>    
+      </div>
     </div>
 
     <script src="js/jquery-3.6.0.js"></script>
