create contact section

--- a/index.html
+++ b/index.html
@@ -144,6 +144,10 @@
       </div>
     </div>
 
+    <div class="container-fluid contact">
+      <img src="assets/backgrounds/c_image.jpg" alt="contact" />
+    </div>
+
     <script src="js/jquery-3.6.0.js"></script>
     <script src="js/scripts.js"></script>
   </body>
