create footer section

--- a/index.html
+++ b/index.html
@@ -167,8 +167,21 @@
           </div>
         </form>
       </div>
-
     </div>
+
+    <footer>
+      <div><img src="assets/social_icons/twitter.png" alt=""></div>
+      <div><img src="assets/social_icons/dribble.png" alt=""></div>
+      <div><img src="assets/social_icons/facebook.png" alt=""></div>
+      <div><img src="assets/social_icons/g_plus.png" alt=""></div>
+      <div><img src="assets/social_icons/skype.png" alt=""></div>
+      <div><img src="assets/social_icons/stumble_upon.png" alt=""></div>
+      <div><img src="assets/social_icons/behance.png" alt=""></div>
+      <div><img src="assets/social_icons/pinterest.png" alt=""></div>
+      <div><img src="assets/social_icons/flickr.png" alt=""></div>
+      <p class="text-center pb-0">DELANI STUDIO</p>
+      <p class="text-center">2019</p>
+    </footer>
       
     <script src="js/jquery-3.6.0.js"></script>
     <script src="js/scripts.js"></script>
