--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
       </div>
     </div>
 
-    <footer>
+    <div class="container mt-3 socials">
       <div><img src="assets/social_icons/twitter.png" alt=""></div>
       <div><img src="assets/social_icons/dribble.png" alt=""></div>
       <div><img src="assets/social_icons/facebook.png" alt=""></div>
@@ -179,8 +179,13 @@
       <div><img src="assets/social_icons/behance.png" alt=""></div>
       <div><img src="assets/social_icons/pinterest.png" alt=""></div>
       <div><img src="assets/social_icons/flickr.png" alt=""></div>
-      <p class="text-center pb-0">DELANI STUDIO</p>
-      <p class="text-center">2019</p>
+    </div>
+    
+    <footer>
+      <div class="mt-5">
+        <p class="text-center pb-0">DELANI STUDIO</p>
+        <p class="text-center">2019</p>
+      </div>
     </footer>
       
     <script src="js/jquery-3.6.0.js"></script>
