--- a/index.html
+++ b/index.html
@@ -126,13 +126,77 @@
 
     <div><h3 class="text-center pt-4 pb-3">PORTFOLIO</h3></div>
     <div class="container portfolio pb-5">
-      <div><img src="assets/portfolio/work4.jpg" alt="work" /></div>
-      <div><img src="assets/portfolio/work3.jpg" alt="work" /></div>
-      <div><img src="assets/portfolio/work2.jpg" alt="work" /></div>
-      <div><img src="assets/portfolio/work1.jpg" alt="work" /></div>
-      <div><img src="assets/portfolio/work5.jpg" alt="work" /></div>
-      <div><img src="assets/portfolio/work6.jpg" alt="work" /></div>
-      <div><img src="assets/portfolio/work7.jpg" alt="work" /></div>
+
+      <div class="overlay-wrapper">
+        <img src="assets/portfolio/work4.jpg" alt="work" />
+        <div class="overlay-cont">
+          <div class="overlay">
+            <h3 class="text-light p-2">BAILEY</h3>
+            <h3 class="text-light p-2">WONGER</h3>
+          </div>
+        </div>    
+      </div>
+
+      <div class="overlay-wrapper">
+        <img src="assets/portfolio/work3.jpg" alt="work" />
+        <div class="overlay-cont">
+          <div class="overlay">
+            <h3 class="text-light p-2">BAILEY</h3>
+            <h3 class="text-light p-2">WONGER</h3>
+          </div>
+        </div>    
+      </div>
+
+      <div class="overlay-wrapper">
+        <img src="assets/portfolio/work2.jpg" alt="work" />
+        <div class="overlay-cont">
+          <div class="overlay">
+            <h3 class="text-light p-2">BAILEY</h3>
+            <h3 class="text-light p-2">WONGER</h3>
+          </div>
+        </div>    
+      </div>
+
+      <div class="overlay-wrapper">
+        <img src="assets/portfolio/work1.jpg" alt="work" />
+        <div class="overlay-cont">
+          <div class="overlay">
+            <h3 class="text-light p-2">BAILEY</h3>
+            <h3 class="text-light p-2">WONGER</h3>
+          </div>
+        </div>    
+      </div>
+
+      <div class="overlay-wrapper">
+        <img src="assets/portfolio/work5.jpg" alt="work" />
+        <div class="overlay-cont">
+          <div class="overlay">
+            <h3 class="text-light p-2">BAILEY</h3>
+            <h3 class="text-light p-2">WONGER</h3>
+          </div>
+        </div>    
+      </div>
+
+      <div class="overlay-wrapper">
+        <img src="assets/portfolio/work6.jpg" alt="work" />
+        <div class="overlay-cont">
+          <div class="overlay">
+            <h3 class="text-light p-2">BAILEY</h3>
+            <h3 class="text-light p-2">WONGER</h3>
+          </div>
+        </div>    
+      </div>
+
+      <div class="overlay-wrapper">
+        <img src="assets/portfolio/work7.jpg" alt="work" />
+        <div class="overlay-cont">
+          <div class="overlay">
+            <h3 class="text-light p-2">BAILEY</h3>
+            <h3 class="text-light p-2">WONGER</h3>
+          </div>
+        </div>    
+      </div>
+
       <div class="overlay-wrapper">
         <img src="assets/portfolio/work8.jpg" alt="work" />
         <div class="overlay-cont">
@@ -142,6 +206,14 @@
           </div>
         </div>    
       </div>
+      <!-- <div><img src="assets/portfolio/work4.jpg" alt="work" /></div> -->
+      <!-- <div><img src="assets/portfolio/work3.jpg" alt="work" /></div> -->
+      <!-- <div><img src="assets/portfolio/work2.jpg" alt="work" /></div> -->
+      <!-- <div><img src="assets/portfolio/work1.jpg" alt="work" /></div> -->
+      <!-- <div><img src="assets/portfolio/work5.jpg" alt="work" /></div> -->
+      <!-- <div><img src="assets/portfolio/work6.jpg" alt="work" /></div> -->
+      <!-- <div><img src="assets/portfolio/work7.jpg" alt="work" /></div> -->
+      
     </div>
 
     <div class="container-fluid contact">
