implement hover effect

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         <div class="img-cont">
           <h5 class="text-center">DEVELOPMENT</h5>
           <p class="text-center">
-            All engineers are fluent in the latest enterpris, mobile and web
+            All engineers are fluent in the latest enterprise, mobile and web
             development technologies.
           </p>
           <p class="text-center">
