--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
       </div>
     </div>
 
-    <div class="container mt-3 socials">
+    <div class="container mt-5 socials">
       <div><img src="assets/social_icons/twitter.png" alt=""></div>
       <div><img src="assets/social_icons/dribble.png" alt=""></div>
       <div><img src="assets/social_icons/facebook.png" alt=""></div>
@@ -247,8 +247,8 @@
     </div>
 
     <footer>
-      <div class="mt-5">
-        <p class="text-center pb-0">DELANI STUDIO</p>
+      <div class="mt-3">
+        <p class="text-center">DELANI STUDIO</p>
         <p class="text-center">2019</p>
       </div>
     </footer>
