make the application responsive

--- a/index.html
+++ b/index.html
@@ -216,10 +216,10 @@
 
           <div class="form-input m-3">
             <div class="detail">
-            <input class="p-2" type="text" id="fname" name="fname" placeholder="Name..."><br>
+            <input class="p-2" type="text" id="fname" name="fname" placeholder="Name..." required><br>
             </div>
             <div class="detail">
-            <input class="p-2" type="text" id="email" name="lname" placeholder="Email...">
+            <input class="p-2" type="text" id="email" name="lname" placeholder="Email..." required>
             </div> 
           </div>
           <div class="form-floating pt-3">
