--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
       </div>
 
     <div class="container-fluid contact">
-      <div class="container">
+      <div class="container p-2">
         <h3 class="text-center text-white pt-5 pb-3">CONTACT US</h3>
         <form id="myForm">
           <div class="myAlert"></div>
