--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/bootstrap.min.css" />
     <link rel="stylesheet" href="css/style.css" />
     <title>Delani-Studio</title>
   </head>
@@ -24,7 +24,9 @@
           </p>
         </div>
         <div class="mouse-icon text-center">
-          <a href="#about" id="mouse-click" class="d-block"><img src="assets/mouse_click.png" alt="mouse-click-icon" /></a>
+          <a href="#about" id="mouse-click" class="d-block"
+            ><img src="assets/mouse_click.png" alt="mouse-click-icon"
+          /></a>
         </div>
       </div>
     </div>
@@ -127,7 +129,6 @@
 
     <div><h3 class="text-center pt-4 pb-3">PORTFOLIO</h3></div>
     <div class="container portfolio pb-5">
-
       <div class="overlay-wrapper">
         <img src="assets/portfolio/work4.jpg" alt="work" />
         <div class="overlay-cont">
@@ -135,7 +136,7 @@
             <h3 class="text-light p-2">BAILEY</h3>
             <h3 class="text-light p-2">WONGER</h3>
           </div>
-        </div>    
+        </div>
       </div>
 
       <div class="overlay-wrapper">
@@ -145,7 +146,7 @@
             <h3 class="text-light p-2">BAILEY</h3>
             <h3 class="text-light p-2">WONGER</h3>
           </div>
-        </div>    
+        </div>
       </div>
 
       <div class="overlay-wrapper">
@@ -155,7 +156,7 @@
             <h3 class="text-light p-2">BAILEY</h3>
             <h3 class="text-light p-2">WONGER</h3>
           </div>
-        </div>    
+        </div>
       </div>
 
       <div class="overlay-wrapper">
@@ -165,7 +166,7 @@
             <h3 class="text-light p-2">BAILEY</h3>
             <h3 class="text-light p-2">WONGER</h3>
           </div>
-        </div>    
+        </div>
       </div>
 
       <div class="overlay-wrapper">
@@ -175,7 +176,7 @@
             <h3 class="text-light p-2">BAILEY</h3>
             <h3 class="text-light p-2">WONGER</h3>
           </div>
-        </div>    
+        </div>
       </div>
 
       <div class="overlay-wrapper">
@@ -185,7 +186,7 @@
             <h3 class="text-light p-2">BAILEY</h3>
             <h3 class="text-light p-2">WONGER</h3>
           </div>
-        </div>    
+        </div>
       </div>
 
       <div class="overlay-wrapper">
@@ -195,7 +196,7 @@
             <h3 class="text-light p-2">BAILEY</h3>
             <h3 class="text-light p-2">WONGER</h3>
           </div>
-        </div>    
+        </div>
       </div>
 
       <div class="overlay-wrapper">
@@ -205,9 +206,9 @@
             <h3 class="text-light p-2">BAILEY</h3>
             <h3 class="text-light p-2">WONGER</h3>
           </div>
-        </div>    
+        </div>
       </div>
-      </div>
+    </div>
 
     <div class="container-fluid contact">
       <div class="container p-2">
@@ -217,18 +218,39 @@
 
           <div class="form-input m-3">
             <div class="detail">
-            <input class="p-2" type="text" id="fname" name="fname" placeholder="Name..." required><br>
+              <input
+                class="p-2"
+                type="text"
+                id="fname"
+                name="fname"
+                placeholder="Name..."
+                required
+              /><br />
             </div>
             <div class="detail">
-            <input class="p-2" type="text" id="email" name="lname" placeholder="Email..." required>
-            </div> 
+              <input
+                class="p-2"
+                type="text"
+                id="email"
+                name="lname"
+                placeholder="Email..."
+                required
+              />
+            </div>
           </div>
           <div class="form-floating pt-3">
-            <textarea name="message" style="width:60vw; height:300px" class="p-2" placeholder="Your message here..."></textarea></textarea>
+            <textarea
+              name="message"
+              style="width: 60vw; height: 300px"
+              class="p-2"
+              placeholder="Your message here..."
+            ></textarea>
           </div>
           <div>
             <div class="col text-center mt-5">
-              <button class="btn btn-secondary" type="submit" id="submit">Submit</button>
+              <button class="btn btn-secondary" type="submit" id="submit">
+                Submit
+              </button>
             </div>
           </div>
         </form>
@@ -236,24 +258,23 @@
     </div>
 
     <div class="container mt-5 socials">
-      <div><img src="assets/social_icons/twitter.png" alt=""></div>
-      <div><img src="assets/social_icons/dribble.png" alt=""></div>
-      <div><img src="assets/social_icons/facebook.png" alt=""></div>
-      <div><img src="assets/social_icons/g_plus.png" alt=""></div>
-      <div><img src="assets/social_icons/skype.png" alt=""></div>
-      <div><img src="assets/social_icons/stumble_upon.png" alt=""></div>
-      <div><img src="assets/social_icons/behance.png" alt=""></div>
-      <div><img src="assets/social_icons/pinterest.png" alt=""></div>
-      <div><img src="assets/social_icons/flickr.png" alt=""></div>
+      <div><img src="assets/social_icons/twitter.png" alt="" /></div>
+      <div><img src="assets/social_icons/dribble.png" alt="" /></div>
+      <div><img src="assets/social_icons/facebook.png" alt="" /></div>
+      <div><img src="assets/social_icons/g_plus.png" alt="" /></div>
+      <div><img src="assets/social_icons/skype.png" alt="" /></div>
+      <div><img src="assets/social_icons/stumble_upon.png" alt="" /></div>
+      <div><img src="assets/social_icons/behance.png" alt="" /></div>
+      <div><img src="assets/social_icons/pinterest.png" alt="" /></div>
+      <div><img src="assets/social_icons/flickr.png" alt="" /></div>
     </div>
 
     <footer>
       <div class="mt-3">
-        <p class="text-center">DELANI STUDIO</p>
-        <p class="text-center">2019</p>
+        <p class="text-center delani">DELANI STUDIO<br>2019</p>
       </div>
     </footer>
-      
+
     <script src="js/jquery-3.6.0.js"></script>
     <script src="js/scripts.js"></script>
   </body>
