update portfolio section

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
       </div>
     </div>
 
-    <div><h3 class="text-center pt-4">WHAT WE DO</h3></div>
+    <div><h3 class="text-center pt-5">WHAT WE DO</h3></div>
     <div class="container-fluid what-we-do" id="what-we-do">
       <div class="design">
         <div class="img-cont">
@@ -133,8 +133,7 @@
         <img src="assets/portfolio/work4.jpg" alt="work" />
         <div class="overlay-cont">
           <div class="overlay">
-            <h3 class="text-light p-2">BAILEY</h3>
-            <h3 class="text-light p-2">WONGER</h3>
+            <h3 class="text-light p-2">BAILEY<br>WONGER</h3>
           </div>
         </div>
       </div>
@@ -143,8 +142,7 @@
         <img src="assets/portfolio/work3.jpg" alt="work" />
         <div class="overlay-cont">
           <div class="overlay">
-            <h3 class="text-light p-2">BAILEY</h3>
-            <h3 class="text-light p-2">WONGER</h3>
+            <h3 class="text-light p-2">BAILEY<br>WONGER</h3>
           </div>
         </div>
       </div>
@@ -153,8 +151,7 @@
         <img src="assets/portfolio/work2.jpg" alt="work" />
         <div class="overlay-cont">
           <div class="overlay">
-            <h3 class="text-light p-2">BAILEY</h3>
-            <h3 class="text-light p-2">WONGER</h3>
+            <h3 class="text-light p-2">BAILEY<br>WONGER</h3>
           </div>
         </div>
       </div>
@@ -163,8 +160,7 @@
         <img src="assets/portfolio/work1.jpg" alt="work" />
         <div class="overlay-cont">
           <div class="overlay">
-            <h3 class="text-light p-2">BAILEY</h3>
-            <h3 class="text-light p-2">WONGER</h3>
+            <h3 class="text-light p-2">BAILEY<br>WONGER</h3>
           </div>
         </div>
       </div>
@@ -173,8 +169,7 @@
         <img src="assets/portfolio/work5.jpg" alt="work" />
         <div class="overlay-cont">
           <div class="overlay">
-            <h3 class="text-light p-2">BAILEY</h3>
-            <h3 class="text-light p-2">WONGER</h3>
+            <h3 class="text-light p-2">BAILEY<br>WONGER</h3>
           </div>
         </div>
       </div>
@@ -183,8 +178,7 @@
         <img src="assets/portfolio/work6.jpg" alt="work" />
         <div class="overlay-cont">
           <div class="overlay">
-            <h3 class="text-light p-2">BAILEY</h3>
-            <h3 class="text-light p-2">WONGER</h3>
+            <h3 class="text-light p-2">BAILEY<br>WONGER</h3>
           </div>
         </div>
       </div>
@@ -193,8 +187,7 @@
         <img src="assets/portfolio/work7.jpg" alt="work" />
         <div class="overlay-cont">
           <div class="overlay">
-            <h3 class="text-light p-2">BAILEY</h3>
-            <h3 class="text-light p-2">WONGER</h3>
+            <h3 class="text-light p-2">BAILEY<br>WONGER</h3>
           </div>
         </div>
       </div>
@@ -203,8 +196,7 @@
         <img src="assets/portfolio/work8.jpg" alt="work" />
         <div class="overlay-cont">
           <div class="overlay">
-            <h3 class="text-light p-2">BAILEY</h3>
-            <h3 class="text-light p-2">WONGER</h3>
+            <h3 class="text-light p-2">BAILEY<br>WONGER</h3>
           </div>
         </div>
       </div>
