--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
 
   <body>
     <div class="container-fluid head">
-      <div class="container">
+      <div class="container header">
         <div class="logo text-center">
           <img src="assets/logo/logo.png" alt="logo" />
         </div>
         <div class="header">
-          <h1 class="text-light text-center">WELCOME</h1>
+          <h1 class="text-light text-center one">WELCOME</h1>
           <br />
-          <h1 class="text-light text-center">TO DELANI STUDIO</h1>
-          <p class="text-light text-center">
+          <h1 class="text-light text-center one">TO DELANI STUDIO</h1>
+          <p class="text-light text-center one">
             AMAZING PEOPLE ARE MAKING AMAZING DESIGNS IN A FUN ENVIRONMENT
           </p>
         </div>
